[gd_scene load_steps=5 format=3 uid="uid://cyhukmk261lvj"]

[ext_resource type="Script" path="res://Grid/Grid.gd" id="1_538ot"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4yuc4"]
bg_color = Color(0.178212, 0.178212, 0.178212, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j4grh"]
bg_color = Color(0.294028, 0.294028, 0.294028, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.254902, 0.254902, 0.254902, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i4fpo"]
bg_color = Color(1, 1, 1, 1)

[node name="Grid" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_538ot")

[node name="BottomPanel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4yuc4")

[node name="SafeZone" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j4grh")

[node name="LetterZone" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i4fpo")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
width = 8.0
default_color = Color(0.253843, 0.253843, 0.253843, 1)
